Prevent line wrap on battle moves

--- a/Stream Tool/Overlays/X and Y/Resources/XY.css
+++ b/Stream Tool/Overlays/X and Y/Resources/XY.css
@@ -295,7 +295,7 @@ html, body {
 }
 
 
-/* Bottom Pokemon Section */
+/* Non-Trainer battle pokemon Section */
 
 #botPokes {
     position: absolute;
@@ -716,6 +716,7 @@ html, body {
     transform: translateY(1px);
     font-size: 20px;
     text-wrap: nowrap;
+    white-space: nowrap;
 }
 .activeMoveRight {
     display: flex;
